# vmix-taskio

./: CMakeLists.txt  README.md  vcpkg.json
include/vmix/: taskio.hpp
include/vmix/taskio/: task.hpp  task_service.hpp  task_storage.hpp  version.hpp
include/vmix/taskio/detail/: in_memory_task_storage.hpp  sqlite_task_storage.hpp  task.hpp
src/: main.cpp  task.cpp  task_service.cpp  task_storage.cpp
src/detail/: in_memory_task_storage.cpp  sqlite_task_storage.cpp
test/: CMakeLists.txt  main.cpp  test_task.cpp  test_task_service.cpp  test_version.cpp  tools.hpp
